Support token authentication
