# src/routes/v1Routes.js
@@ -2,10 +2,10 @@ const express = require("express");
 const router = express.Router();
 const v1Controller = require("../controllers/v1Controller");
 
-router.get("/", v1Controller.getAllResources);
-router.post("/", v1Controller.createResource);
-router.put("/:id", v1Controller.updateResource);
-router.patch("/:id", v1Controller.modifyResource);
-router.delete("/:id", v1Controller.deleteResource);
+router.get("/resources", v1Controller.getAllResources);
+router.post("/resources", v1Controller.createResource);
+router.put("/resources/:id", v1Controller.updateResource);
+router.patch("/resources/:id", v1Controller.modifyResource);
+router.delete("/resources/:id", v1Controller.deleteResource);
 
 module.exports = router;
