# src/routes/v2Routes.js
@@ -2,10 +2,10 @@ const express = require("express");
 const routerV2 = express.Router();
 const v2Controller = require("../controllers/v2Controller");
 
-routerV2.get("/", v2Controller.getAllResources);
-routerV2.post("/", v2Controller.createResource);
-routerV2.put("/:id", v2Controller.updateResource);
-routerV2.patch("/:id", v2Controller.modifyResource);
-routerV2.delete("/:id", v2Controller.deleteResource);
+routerV2.get("/resources/", v2Controller.getAllResources);
+routerV2.post("/resources/", v2Controller.createResource);
+routerV2.put("/resources/:id", v2Controller.updateResource);
+routerV2.patch("/resources/:id", v2Controller.modifyResource);
+routerV2.delete("/resources/:id", v2Controller.deleteResource);
 
 module.exports = routerV2;
